--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,5 @@
 {
-    "workbench.colorTheme": "Default Dark+",
+    "workbench.colorTheme": "Default Dark Modern",
     "terminal.integrated.env.windows": {
         "PYTHONPATH": "${workspaceFolder}"
     },
