--- a/vscode/settings.json
+++ b/vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "workbench.colorTheme": "Default Dark Modern",
+    "workbench.iconTheme": "material-icon-theme",
     "terminal.integrated.env.windows": {
         "PYTHONPATH": "${workspaceFolder}"
     },
